small change from report

--- a/index.html
+++ b/index.html
@@ -12,36 +12,25 @@
   <link rel="stylesheet" href="./styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
-  </style>
 </head>
 
 <body>
 
   <div class="container">
     <div class="top">
-      <img src="./images/illustration-hero.svg" alt="" srcset="">
+      <img src="./images/illustration-hero.svg">
     </div>
     <div class="bottom">
       <div class="btmTop">
-        <h2 class="largeText">Order Summary</h2>
+        <h1 class="largeText">Order Summary</h1>
 
         <p class="subTitle">You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!
         </p>
       </div>
       <div class="btmMiddle">
-        <div>
-          <img src="./images/icon-music.svg" alt="">
+        <div class="paymentPlan">
+          <img src="./images/icon-music.svg" alt="continue your payment">
           <p>Annual Plan <br><span class="subTitle">$59.99/year</span></p>
         </div>
         <a href="#">Change</a>
